# FellowHashbrown-API

./: apis.json  index.html  main.py  pyproject.toml  util.py
api_methods/: animals.py  api.py  base_api.py  morse.py  strange_planet.py
api_methods/games/: games.py
api_methods/logic/: expression.py  logic.py  tree.py
api_methods/quotes/: quotes.py
api_methods/secret/: omegapsi.py  redirects.py
api_methods/secret/omegapsi/: bot.py  case_numbers.py
database/: database.py  platform.py
database/db/: game_of_life.py  omegapsi.py  quotes.py  website.py
database/db/omegapsi/: bot.py
static/: style.css
templates/: api.html
