[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "api"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
Flask-RESTful = "^0.3.8"
pymongo = "^3.10"
python = "^3.8"
lark = "^0.10.1"
quine-mccluskey = "^0.3"
[tool.poetry.dev-dependencies]
