[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-RESTful = "^0.3.8"
Flask = "^1.1.2"
lark-parser = "^0.10.1"
pymongo = "^3.11.0"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
